--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytz = "^2022.1"
 boto3 = "^1.24.33"
 numpy = "^1.23.1"
 pandas = "^1.4.3"
+geopy = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.27.1"
