--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -21,7 +21,8 @@
         },
         "bb_calc_daily_stats": {
           "iam_policy_file": "policy-bluebikes-calc.json",
-          "lambda_timeout": 300
+          "lambda_timeout": 300,
+          "lambda_memory_size": 256
         }
       }
     }
