Set up policies, rework batch writes, add tables

--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -23,6 +23,23 @@
           "iam_policy_file": "policy-bluebikes-calc.json",
           "lambda_timeout": 60,
           "lambda_memory_size": 256
+        },
+        "update_daily_speed_table": {
+          "iam_policy_file": "policy-dynamo-batch-write.json"
+        },
+        "populate_daily": {
+          "iam_policy_file": "policy-dynamo-batch-write.json",
+          "lambda_timeout": 600
+        },
+        "update_weekly_and_monthly_tables": {
+          "iam_policy_file": "policy-batch-write-weekly-monthly.json"
+        },
+        "populate_weekly_or_monthly_tables": {
+          "iam_policy_file": "policy-batch-write-weekly-monthly.json",
+          "lambda_timeout": 60
+        },
+        "update_scheduled_speed": {
+          "iam_policy_file": "policy-update-scheduled-speed.json"
         }
       }
     }
