--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,21 +2,27 @@
 name = "data-ingestion"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["TransitMatters Labs Team"]
+license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-requests = "^2.28.1"
+python = "~3.9"
+requests = "^2.28.2"
 json-api-doc = "^0.15.0"
-pytz = "^2022.1"
-boto3 = "^1.24.33"
-numpy = "^1.23.1"
-pandas = "^1.4.3"
+pytz = "^2023.3"
+boto3 = "^1.26.110"
+numpy = "^1.24.2"
+pandas = "^1.5.3"
 geopy = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
-chalice = "^1.27.1"
-flake8 = "^4.0.1"
+chalice = "^1.28.0"
+flake8 = "^6.0.0"
+black = "^23.3.0"
+
+[tool.black]
+line-length = 120
+target-version = ['py39']
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
