--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,12 @@ geopy = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.27.1"
-flake8 = "^4.0.1"
+flake8 = "6.0.0"
+black = "^23.3.0"
+
+[tool.black]
+line-length = 120
+target-version = ['py39']
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
