--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ boto3 = "^1.24.33"
 numpy = "^1.23.1"
 pandas = "^1.4.3"
 geopy = "^2.2.0"
+python-dotenv = "^1.0.0"
+mbta-gtfs-sqlite = "^0.9.5"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.27.1"
