--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -37,6 +37,11 @@
         "populate_weekly_or_monthly_tables": {
           "iam_policy_file": "policy-agg-tables.json",
           "lambda_timeout": 60
+        },
+        "update_gtfs": {
+          "iam_policy_file": "policy-gtfs.json",
+          "lambda_timeout": 900,
+          "lambda_memory_size": 4096
         }
       }
     }
