configure compact loading correctly

--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -41,7 +41,8 @@
         "update_gtfs": {
           "iam_policy_file": "policy-gtfs.json",
           "lambda_timeout": 900,
-          "lambda_memory_size": 4096
+          "lambda_memory_size": 10240,
+          "max_ebs_size_gb": 10
         }
       }
     }
