--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -43,6 +43,12 @@
           "lambda_timeout": 900,
           "lambda_memory_size": 10240,
           "max_ebs_size_gb": 10
+        },
+        "update_ridership": {
+          "iam_policy_file": "policy-ridership.json",
+          "lambda_timeout": 900,
+          "lambda_memory_size": 4096,
+          "max_ebs_size_gb": 2
         }
       }
     }
