--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pandas = "^1.4.3"
 geopy = "^2.2.0"
 python-dotenv = "^1.0.0"
 mbta-gtfs-sqlite = "^0.9.5"
+boxsdk = "^3.7.1"
+openpyxl = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.27.1"
