Add ingestion for  daily/weekly/monthly speed data (#8)
* Add ingestion for speed adherence and daily/weekly/monthly speed databases

* Move schedAdherence code

* Set up policies, rework batch writes, add tables

* Clean Up

* Delete test.json

* Verify lambdas and cron set up is correct and clean up

* Rename things

* Bug with update daily + Remove scheduled speed DB

* Update line abbreviations from RL, OL, BL to line-red, line-orange, line-blue

* Update line names in comments

* feature: Ingest MBTA GTFS to S3 and DynamoDB

* remove a few unused imports

* move tmpfile/boto concerns back to gtfs dir

* probably safe to get rid of hardcoded lines

* newline

* hrmmm

* add IAM policy and config entry

* configure compact loading correctly

* newline

* Ingest undefined values

* bug fix

* Remove test routes

* bit of cleanup

* add lambda for updating day after

* add table definition

* fix attribute name

* use latest mbta-gtfs-sqlite

* is_added_by_exception

* use more generalized ingestion fn

* use newest mbta-gtfs-sqlite with support for FeedInfo.feed_id

* Lint

---------

Co-authored-by: JBR <john.russell@tufts.edu>
Co-authored-by: Ian Reynolds <idreyn@gmail.com>

--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -23,6 +23,29 @@
           "iam_policy_file": "policy-bluebikes-calc.json",
           "lambda_timeout": 60,
           "lambda_memory_size": 256
+        },
+        "update_daily_speed_table": {
+          "iam_policy_file": "policy-daily-table.json"
+        },
+        "populate_daily": {
+          "iam_policy_file": "policy-daily-table.json",
+          "lambda_timeout": 600
+        },
+        "update_yesterday_speeds": {
+          "iam_policy_file": "policy-daily-table.json"
+        },
+        "update_weekly_and_monthly_tables": {
+          "iam_policy_file": "policy-agg-tables.json"
+        },
+        "populate_weekly_or_monthly_tables": {
+          "iam_policy_file": "policy-agg-tables.json",
+          "lambda_timeout": 60
+        },
+        "update_gtfs": {
+          "iam_policy_file": "policy-gtfs.json",
+          "lambda_timeout": 900,
+          "lambda_memory_size": 10240,
+          "max_ebs_size_gb": 10
         }
       }
     }
