--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ boto3 = "^1.26.145"
 numpy = "^1.24.2"
 pandas = "^1.5.3"
 geopy = "^2.2.0"
+python-dotenv = "^1.0.0"
+mbta-gtfs-sqlite = "^0.9.9"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.28.0"
