--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pandas = "^1.5.3"
 geopy = "^2.2.0"
 python-dotenv = "^1.0.0"
 mbta-gtfs-sqlite = "^0.9.9"
+boxsdk = "^3.7.1"
+openpyxl = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.28.0"
