Hotfix: Add policy file for speed restrictions lambda
This reverts commit a13934652c80cfc85a2fc7761761a663757cdfd2.

--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -52,6 +52,10 @@
           "lambda_timeout": 900,
           "lambda_memory_size": 512,
           "max_ebs_size_gb": 2
+        },
+        "update_speed_restrictions": {
+          "iam_policy_file": "policy-speed-restrictions.json",
+          "lambda_timeout": 300
         }
       }
     }
