--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "python.formatting.blackPath": ".venv/bin/black",
-  "python.formatting.provider": "none",
+  "python.formatting.provider": "black",
   "editor.formatOnSave": true,
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter"
