--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-dotenv = "^1.0.0"
 mbta-gtfs-sqlite = "^0.9.13"
 boxsdk = "^3.7.1"
 openpyxl = "^3.1.2"
+dynamodb-json = "^1.3"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.29.0"
