--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -2,10 +2,19 @@
   "version": "2.0",
   "app_name": "ingestor",
   "automatic_layer": true,
+  "layers": [
+    "arn:aws:lambda:us-east-1:464622532012:layer:Datadog-Extension:44"
+  ],
   "stages": {
     "prod": {
       "api_gateway_stage": "api",
       "autogen_policy": false,
+      "environment_variables": {
+        "DD_SITE": "datadoghq.com",
+        "DD_TRACE_ENABLED": "true",
+        "DD_ENV": "prod",
+        "DD_SERVICE": "data-ingestion"
+      },
       "lambda_functions": {
         "store_yesterday_alerts": {
           "iam_policy_file": "policy-alerts.json"
