--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ mbta-gtfs-sqlite = "^0.9.13"
 boxsdk = "^3.7.1"
 openpyxl = "^3.1.2"
 dynamodb-json = "^1.3"
+datadog_lambda = "^4.75.0"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.29.0"
