--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -2,9 +2,6 @@
   "version": "2.0",
   "app_name": "ingestor",
   "automatic_layer": true,
-  "layers": [
-    "arn:aws:lambda:us-east-1:464622532012:layer:Datadog-Extension:44"
-  ],
   "stages": {
     "prod": {
       "api_gateway_stage": "api",
@@ -13,7 +10,7 @@
         "DD_SITE": "datadoghq.com",
         "DD_TRACE_ENABLED": "true",
         "DD_ENV": "prod",
-        "DD_SERVICE": "data-ingestion"
+        "DD_SERVICE": "ingestor"
       },
       "lambda_functions": {
         "store_yesterday_alerts": {
