--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,8 @@ authors = ["TransitMatters Labs Team"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.9, <3.11"
+python = "^3.10, <3.11"
 requests = "^2.31.0"
-json-api-doc = "^0.15.0"
 pytz = "^2023.3"
 boto3 = "^1.26.154"
 numpy = "^1.24.2"
@@ -28,7 +27,7 @@ black = "^23.3.0"
 
 [tool.black]
 line-length = 120
-target-version = ['py39', 'py310']
+target-version = ['py310']
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
