--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -11,9 +11,9 @@
       "autogen_policy": false,
       "environment_variables": {
         "DD_SITE": "datadoghq.com",
-        "DD_TRACE_ENABLED": "true",
         "DD_ENV": "prod",
-        "DD_SERVICE": "ingestor"
+        "DD_SERVICE": "ingestor",
+        "DD_TRACE_ENABLED": "false"
       },
       "lambda_functions": {
         "store_yesterday_alerts": {
@@ -23,14 +23,16 @@
           "iam_policy_file": "policy-newtrains.json"
         },
         "bb_store_station_status": {
-          "iam_policy_file": "policy-bluebikes-store.json"
+          "iam_policy_file": "policy-bluebikes-store.json",
+          "lambda_timeout": 90
         },
         "bb_store_station_info": {
-          "iam_policy_file": "policy-bluebikes-store.json"
+          "iam_policy_file": "policy-bluebikes-store.json",
+          "lambda_timeout": 90
         },
         "bb_calc_daily_stats": {
           "iam_policy_file": "policy-bluebikes-calc.json",
-          "lambda_timeout": 60,
+          "lambda_timeout": 90,
           "lambda_memory_size": 256
         },
         "store_landing_data": {
@@ -52,10 +54,12 @@
           "lambda_timeout": 600
         },
         "update_delivered_trip_metrics": {
-          "iam_policy_file": "policy-delivered-trip-metrics-daily.json"
+          "iam_policy_file": "policy-delivered-trip-metrics-daily.json",
+          "lambda_timeout": 90
         },
         "update_delivered_trip_metrics_yesterday": {
-          "iam_policy_file": "policy-delivered-trip-metrics-daily.json"
+          "iam_policy_file": "policy-delivered-trip-metrics-daily.json",
+          "lambda_timeout": 90
         },
         "update_agg_trip_metrics": {
           "iam_policy_file": "policy-agg-trip-metric-tables.json"
