--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ authors = ["TransitMatters Labs Team"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.10, <3.11"
+python = "~3.10, <3.11"
 requests = "^2.31.0"
 pytz = "^2023.3"
-boto3 = "^1.26.154"
+boto3 = "^1.28.19"
 numpy = "^1.24.2"
 pandas = "^1.5.3"
 geopy = "^2.2.0"
@@ -18,7 +18,7 @@ mbta-gtfs-sqlite = "^0.9.13"
 boxsdk = "^3.7.1"
 openpyxl = "^3.1.2"
 dynamodb-json = "^1.3"
-datadog_lambda = "^4.77.0"
+datadog_lambda = "4.77.0"
 ddtrace = "1.15.2"
 
 [tool.poetry.dev-dependencies]
@@ -31,5 +31,5 @@ line-length = 120
 target-version = ['py310']
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.5.0"]
 build-backend = "poetry.core.masonry.api"
