--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -38,6 +38,10 @@
         "store_landing_data_manual_delete_this": {
           "iam_policy_file": "policy-landing-data.json"
         },
+        "store_parking_data": {
+          "iam_policy_file": "policy-store-parking-data.json",
+          "lambda_timeout": 300
+        },
         "update_daily_speed_table": {
           "iam_policy_file": "policy-daily-table.json",
           "lambda_timeout": 20
