--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ mbta-gtfs-sqlite = "^0.9.13"
 boxsdk = "^3.7.1"
 openpyxl = "^3.1.2"
 dynamodb-json = "^1.3"
+osm2geojson = "^0.2.4"
 datadog_lambda = "4.77.0"
 ddtrace = "1.15.2"
 
