--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ openpyxl = "^3.1.2"
 dynamodb-json = "^1.3"
 datadog_lambda = "4.77.0"
 ddtrace = "1.15.2"
+tqdm = "^4.66.1"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.29.0"
