--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,6 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Poetry dependencies
-        run: poetry install
       - name: Generate AWS profile
         run: |
           mkdir ~/.aws
@@ -40,4 +38,5 @@ jobs:
       - name: Run deploy shell script
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
+          poetry install
           bash deploy.sh
