fix: get yankee stuff to be deployable, add cloudformation for it

--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -100,6 +100,10 @@
         "update_time_predictions": {
           "iam_policy_file": "policy-time-predictions.json",
           "lambda_timeout": 300
+        },
+        "yankee": {
+          "iam_policy_file": "policy-yankee.json",
+          "lambda_timeout": 900
         }
       }
     }
