--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,13 @@ dynamodb-json = "^1.3"
 datadog_lambda = "5.90.0"
 ddtrace = "2.7.2"
 tqdm = "^4.66.1"
+pyarrow = "^15.0.2"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.31.0"
 flake8 = "^7.0.0"
 black = "^24.2.0"
+pytest = "~8.1.1"
 
 [tool.black]
 line-length = 120
