--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -20,6 +20,9 @@
         "store_yesterday_alerts": {
           "iam_policy_file": "policy-alerts.json"
         },
+        "store_current_alerts": {
+          "iam_policy_file": "policy-alerts.json"
+        },
         "store_new_train_runs": {
           "iam_policy_file": "policy-newtrains.json"
         },
