--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -2,6 +2,9 @@
   "version": "2.0",
   "app_name": "ingestor",
   "automatic_layer": true,
+  "layers": [
+    "arn:aws:lambda:us-east-1:464622532012:layer:Datadog-Extension:56"
+  ],
   "stages": {
     "prod": {
       "api_gateway_stage": "api",
