Move LAMP code to mbta-performance repo, add v3 alert saving (#97)
* Move LAMP code to mbta-performance repo

* Adding TODO comments

* Start storing alerts every 15 minutes during the service day

* Adding deprecation warnings

* Add service date tests

* Renaming test file

* Fix permissions

* Improve alert job details

* Fixing alerts runs

* Bump version

* Adding job descriptions to help people understand jobs

* We need secretsmanager

* Adding datadog layer

* Remove Datadog layer

* Increase memory limits and improve permissions

* Updating CODEOWNERS

* Small package bumps

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,3 @@
 * @austinjpaul @devinmatte
-ingestor/chalicelib/lamp @devinmatte @hamima-halim
+.github @devinmatte @nathan-weinberg
+devops @devinmatte @nathan-weinberg
