--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -18,7 +18,14 @@
       },
       "lambda_functions": {
         "store_yesterday_alerts": {
-          "iam_policy_file": "policy-alerts.json"
+          "iam_policy_file": "policy-alerts.json",
+          "lambda_memory_size": 256,
+          "lambda_timeout": 150
+        },
+        "store_current_alerts": {
+          "iam_policy_file": "policy-alerts.json",
+          "lambda_memory_size": 256,
+          "lambda_timeout": 90
         },
         "store_new_train_runs": {
           "iam_policy_file": "policy-newtrains.json"
@@ -56,14 +63,17 @@
         },
         "update_delivered_trip_metrics": {
           "iam_policy_file": "policy-delivered-trip-metrics-daily.json",
+          "lambda_memory_size": 192,
           "lambda_timeout": 150
         },
         "update_delivered_trip_metrics_yesterday": {
           "iam_policy_file": "policy-delivered-trip-metrics-daily.json",
+          "lambda_memory_size": 192,
           "lambda_timeout": 150
         },
         "update_agg_trip_metrics": {
-          "iam_policy_file": "policy-agg-trip-metric-tables.json"
+          "iam_policy_file": "policy-agg-trip-metric-tables.json",
+          "lambda_memory_size": 192
         },
         "populate_agg_delivered_trip_metrics": {
           "iam_policy_file": "policy-agg-trip-metric-tables.json"
@@ -106,11 +116,6 @@
           "lambda_memory_size": 1024,
           "lambda_timeout": 60,
           "max_ebs_size_gb": 2
-        },
-        "process_daily_lamp": {
-          "iam_policy_file": "policy-lamp-ingest.json",
-          "lambda_timeout": 900,
-          "lambda_memory_size": 2048
         }
       }
     }
