--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ version = "0.1.3"
 description = ""
 authors = ["TransitMatters Labs Team"]
 license = "MIT"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "~3.11"
-requests = "^2.31.0"
+requests = "^2.32.3"
 pytz = "^2024.1"
 boto3 = "^1.34.82"
 numpy = "^1.24.2"
@@ -22,10 +23,10 @@ datadog_lambda = "5.94.0"
 tqdm = "^4.66.1"
 
 [tool.poetry.dev-dependencies]
-chalice = "^1.31.1"
-flake8 = "^7.0.0"
-black = "^24.4.2"
-pytest = "~8.2.2"
+chalice = "^1.31.2"
+flake8 = "^7.1.1"
+black = "^24.8.0"
+pytest = "~8.3.2"
 
 [tool.black]
 line-length = 120
