--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ openpyxl = "^3.1.2"
 dynamodb-json = "^1.3"
 datadog_lambda = "5.94.0"
 tqdm = "^4.66.1"
+click = "^8.1.7"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.31.2"
