--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,17 +10,17 @@ package-mode = false
 python = "~3.11"
 requests = "^2.32.3"
 pytz = "^2024.1"
-boto3 = "^1.34.82"
+boto3 = "~1.35.11"
 numpy = "^1.24.2"
 pandas = "^1.5.3"
 geopy = "^2.2.0"
 python-dotenv = "^1.0.0"
 mbta-gtfs-sqlite = "^1.1.1"
-boxsdk = "^3.7.1"
-openpyxl = "^3.1.2"
-dynamodb-json = "^1.3"
-datadog_lambda = "5.94.0"
-tqdm = "^4.66.1"
+boxsdk = "^3.13.0"
+openpyxl = "^3.1.5"
+dynamodb-json = "^1.4.2"
+datadog_lambda = "6.98.0"
+tqdm = "^4.66.5"
 
 [tool.poetry.dev-dependencies]
 chalice = "^1.31.2"
