--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,10 @@ datadog_lambda = "6.98.0"
 tqdm = "^4.66.5"
 
 [tool.poetry.dev-dependencies]
-chalice = "^1.31.2"
+chalice = "~1.31.3"
 flake8 = "^7.1.1"
-black = "^24.8.0"
-pytest = "~8.3.2"
+black = "^24.10.0"
+pytest = "~8.3.4"
 
 [tool.black]
 line-length = 120
