--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-* @austinjpaul @devinmatte
+* @austinjpaul @devinmatte @transitmatters/labs-leads
 .github @devinmatte @nathan-weinberg
 devops @devinmatte @nathan-weinberg
