--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,13 +19,13 @@ mbta-gtfs-sqlite = "^1.1.1"
 boxsdk = "^3.13.0"
 openpyxl = "^3.1.5"
 dynamodb-json = "^1.4.2"
-datadog_lambda = "6.104.0"
+datadog_lambda = "6.105.0"
 tqdm = "^4.66.5"
 
-[tool.poetry.dev-dependencies]
-chalice = "~1.31.3"
-flake8 = "^7.1.1"
-black = "^24.10.0"
+[tool.poetry.group.dev.dependencies]
+chalice = "~1.31.4"
+flake8 = "^7.1.2"
+black = "^25.1.0"
 pytest = "~8.3.4"
 
 [tool.poetry.requires-plugins]
@@ -36,5 +36,5 @@ line-length = 120
 target-version = ['py311']
 
 [build-system]
-requires = ["poetry-core>=1.7.0"]
+requires = ["poetry-core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
