Increase memory, lower timeout

--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -27,7 +27,8 @@
         },
         "bb_store_station_status": {
           "iam_policy_file": "policy-bluebikes-store.json",
-          "lambda_timeout": 90
+          "lambda_memory_size": 256,
+          "lambda_timeout": 30
         },
         "bb_store_station_info": {
           "iam_policy_file": "policy-bluebikes-store.json",
