Fix GTFS processing for when big changes occur

--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -91,9 +91,16 @@
         },
         "update_gtfs": {
           "iam_policy_file": "policy-gtfs.json",
-          "lambda_timeout": 500,
+          "lambda_timeout": 300,
           "lambda_memory_size": 768,
           "max_ebs_size_gb": 4
+        },
+        "backfill_gtfs": {
+          "iam_policy_file": "policy-gtfs.json",
+          "lambda_timeout": 500,
+          "lambda_memory_size": 4096,
+          "max_ebs_size_gb": 4,
+          "log_retention_in_days": 15
         },
         "update_ridership": {
           "iam_policy_file": "policy-ridership.json",
