--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python = "~3.12"
 requests = "^2.32.3"
 pytz = "^2025.2"
 boto3 = "~1.38.19"
-numpy = "^2.2.6"
+numpy = "~2.2.6"
 pandas = "^2.2.3"
 geopy = "^2.2.0"
 python-dotenv = "^1.1.0"
@@ -24,8 +24,8 @@ tqdm = "^4.66.5"
 click = "^8.2.0"
 
 [tool.poetry.group.dev.dependencies]
-chalice = "~1.31.4"
-flake8 = "^7.2.0"
+chalice = "~1.32.0"
+flake8 = "^7.3.0"
 black = "^25.1.0"
 pytest = "~8.3.5"
 
