--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,8 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.13"]
+    env:
+      AWS_DEFAULT_REGION: us-east-1
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
