QoL and cloud config updates to daily delay tracking
- Removed authorship comment
- Stores initialized delay type dict as a constant for accessing in process.py (reducing duplicate code)
- Delayed weekly delay update by 15 minutes to allow daily update to run
- Cloud config support added in Chalice json files

**Note: still a bit unsure on the naming conventions of resources in resources.json and how they interface with from functions in app.py (I am assuming names change in Chalice?)

--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -106,7 +106,12 @@
           "lambda_memory_size": 256,
           "lambda_timeout": 90
         },
-        "update_alert_delays": {
+        "update_weekly_alert_delays": {
+          "iam_policy_file": "policy-alert-delays.json",
+          "lambda_memory_size": 256,
+          "lambda_timeout": 300
+        },
+        "update_daily_alert_delays": {
           "iam_policy_file": "policy-alert-delays.json",
           "lambda_memory_size": 256,
           "lambda_timeout": 300
