--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,13 +19,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Setup Poetry
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+      - name: Install dependencies
+        run: uv sync --group dev
+      - name: Check code format with Ruff
         run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-          poetry install
-      - name: Lint code with Flake8
-        run: |
-          poetry run flake8 ingestor
-      - name: Check code format with Black
-        run: |
-          poetry run black --check ingestor
+          uv run ruff check ingestor && uv run ruff format ingestor --check
