--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,43 +1,37 @@
-[tool.poetry]
+[project]
 name = "data-ingestion"
 version = "0.1.3"
 description = ""
-authors = ["TransitMatters Labs Team"]
+authors = [{ name = "TransitMatters Labs Team" }]
+requires-python = ">=3.13,<3.14"
 license = "MIT"
-package-mode = false
+dependencies = [
+    "requests>=2.32.5,<3",
+    "pytz>=2025.2,<2026",
+    "boto3~=1.38.33",
+    "numpy~=2.2.6",
+    "pandas~=2.2.3",
+    "geopy>=2.4.1,<3",
+    "python-dotenv>=1.1.1,<2",
+    "mbta-gtfs-sqlite>=1.1.1,<2",
+    "openpyxl>=3.1.5,<4",
+    "dynamodb-json>=1.4.2,<2",
+    "datadog_lambda~=8.116.0",
+    "tqdm>=4.67.1,<5",
+    "click>=8.2.1,<9",
+]
 
-[tool.poetry.dependencies]
-python = "~3.13"
-requests = "^2.32.5"
-pytz = "^2025.2"
-boto3 = "~1.38.33"
-numpy = "~2.2.6"
-pandas = "~2.2.3"
-geopy = "^2.4.1"
-python-dotenv = "^1.1.1"
-mbta-gtfs-sqlite = "^1.1.1"
-openpyxl = "^3.1.5"
-dynamodb-json = "^1.4.2"
-datadog_lambda = "8.114.0"
-tqdm = "^4.67.1"
-click = "^8.2.1"
-spacy = "^3.8.7"
-rapidfuzz = "^3.14.1"
-en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}
+[dependency-groups]
+dev = [
+    "chalice~=1.32.0",
+    "ruff>=0.14.6",
+    "pytest~=9.0.1",
+    "pre-commit>=4.4.0",
+]
 
-[tool.poetry.group.dev.dependencies]
-chalice = "~1.32.0"
-flake8 = "^7.3.0"
-black = "^25.9.0"
-pytest = "~8.4.2"
-
-[tool.poetry.requires-plugins]
-poetry-plugin-export = ">=1.9.0"
-
-[tool.black]
-line-length = 120
-target-version = ['py313']
+[tool.uv]
+package = false
 
 [build-system]
-requires = ["poetry-core>=2.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
