--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-* @austinjpaul @devinmatte @idreyn @transitmatters/labs-leads
+* @austinjpaul @devinmatte @idreyn @transitmatters/labs-leads @ankoure
 .github @devinmatte @nathan-weinberg
 devops @devinmatte @nathan-weinberg
