--- a/ingestor/.chalice/config.json
+++ b/ingestor/.chalice/config.json
@@ -125,6 +125,11 @@
           "iam_policy_file": "policy-service-ridership-dashboard.json",
           "lambda_timeout": 900,
           "lambda_memory_size": 1024
+        },
+        "update_bus_trip_metrics": {
+          "iam_policy_file": "policy-bus-trip-metrics.json",
+          "lambda_memory_size": 256,
+          "lambda_timeout": 900
         }
       }
     }
