test: Add Testing Infrastructure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,12 @@ dev = [
     "ruff>=0.14.6",
     "pytest~=9.0.1",
     "pre-commit>=4.4.0",
+    "pytest-cov>=7.0.0",
+    "moto[dynamodb]>=5",
 ]
+
+[tool.pytest.ini_options]
+addopts = "--cov=ingestor/chalicelib --cov-report=term-missing"
 
 [tool.uv]
 package = false
